feat: naive euclidean distance solution

--- a/notebooks/Solution.ipynb
+++ b/notebooks/Solution.ipynb
@@ -19,7 +19,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
+   "id": "784dc731",
    "metadata": {},
    "outputs": [
     {
@@ -54,141 +55,120 @@
     "for path in path_permutations:\n",
     "    possibilities.add(path)\n",
     "\n",
-    "print(f\"There are {len(possibilities)} possible paths to choose from.\")\n"
+    "path_permutations = None\n",
+    "\n",
+    "print(f\"There are {len(possibilities)} possible paths to choose from.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47aa0fc0",
+   "metadata": {},
+   "source": [
+    "Perhaps the most naive attempt would be to find the \"least cost\" as a function of distance traveled"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
+   "id": "40de67cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import array\n",
+    "from pyproj import Geod\n",
+    "\n",
+    "def calc_euclidian_distance(arr = None):\n",
+    "    arr = arr or array()\n",
+    "    \n",
+    "    g = Geod(ellps='WGS84')\n",
+    "\n",
+    "    src = arr[0]\n",
+    "    distances = []\n",
+    "\n",
+    "    for i in range(1, len(arr)):\n",
+    "        dst = arr[i]\n",
+    "        _, _, dist = g.inv(src[1], src[0], dst[1], dst[0])\n",
+    "        distances.append(dist)\n",
+    "        src = dst\n",
+    "    \n",
+    "    return array(distances)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "a8a11875",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pandas import DataFrame\n",
+    "from numpy import array, nan\n",
+    "\n",
+    "possible_paths = dict(\n",
+    "    indexes=[],\n",
+    "    # for display\n",
+    "    name=[],\n",
+    "    # for calc\n",
+    "    latlon=[],\n",
+    "    # heuristic\n",
+    "    segment_distance=[],\n",
+    "    total_distance=[],\n",
+    ")\n",
+    "\n",
+    "# max_iter = 100\n",
+    "\n",
+    "for (index, possibility) in enumerate(possibilities):\n",
+    "    # if index >= max_iter:\n",
+    "    #     break\n",
+    "    by_name = array([peaks[i][0] for i in possibility])\n",
+    "    by_latlon = array([peaks[i][1] for i in possibility])\n",
+    "    by_distance = calc_euclidian_distance([peaks[i][1] for i in possibility])\n",
+    "    by_total_distance = by_distance.sum()\n",
+    "    possible_paths['indexes'].append(possibility)\n",
+    "    possible_paths['name'].append(by_name)\n",
+    "    possible_paths['latlon'].append(by_latlon)\n",
+    "    possible_paths['segment_distance'].append(by_distance)\n",
+    "    possible_paths['total_distance'].append(by_total_distance)\n",
+    "\n",
+    "\n",
+    "df = DataFrame(possible_paths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>latlon</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>[Mount Peal, Tempest Mountain, Castle Mountain...</td>\n",
-       "      <td>[[45.160833, -109.772778], [45.166944, -109.79...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>[Granite Peak, Beartooth Mountain, Castle Rock...</td>\n",
-       "      <td>[[45.163427, -109.807456], [45.060833, -109.56...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>[Tempest Mountain, Whitetail Peak, Castle Rock...</td>\n",
-       "      <td>[[45.166944, -109.791944], [45.088889, -109.58...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>[Beartooth Mountain, Castle Rock Spire, Castle...</td>\n",
-       "      <td>[[45.060833, -109.568611], [45.097222, -109.64...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>[Tempest Mountain, Beartooth Mountain, Silver ...</td>\n",
-       "      <td>[[45.166944, -109.791944], [45.060833, -109.56...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3628795</th>\n",
-       "      <td>[Castle Mountain, Granite Peak, Beartooth Moun...</td>\n",
-       "      <td>[[45.098889, -109.630556], [45.163427, -109.80...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3628796</th>\n",
-       "      <td>[Castle Mountain, Granite Peak, Tempest Mounta...</td>\n",
-       "      <td>[[45.098889, -109.630556], [45.163427, -109.80...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3628797</th>\n",
-       "      <td>[Mount Peal, Castle Rock Mountain, Castle Moun...</td>\n",
-       "      <td>[[45.160833, -109.772778], [45.098333, -109.65...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3628798</th>\n",
-       "      <td>[Mount Wood, Granite Peak, Silver Run Peak, Ca...</td>\n",
-       "      <td>[[45.275278, -109.813333], [45.163427, -109.80...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3628799</th>\n",
-       "      <td>[Whitetail Peak, Beartooth Mountain, Mount Woo...</td>\n",
-       "      <td>[[45.088889, -109.587778], [45.060833, -109.56...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3628800 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                      name                                             latlon\n",
-       "0        [Mount Peal, Tempest Mountain, Castle Mountain...  [[45.160833, -109.772778], [45.166944, -109.79...\n",
-       "1        [Granite Peak, Beartooth Mountain, Castle Rock...  [[45.163427, -109.807456], [45.060833, -109.56...\n",
-       "2        [Tempest Mountain, Whitetail Peak, Castle Rock...  [[45.166944, -109.791944], [45.088889, -109.58...\n",
-       "3        [Beartooth Mountain, Castle Rock Spire, Castle...  [[45.060833, -109.568611], [45.097222, -109.64...\n",
-       "4        [Tempest Mountain, Beartooth Mountain, Silver ...  [[45.166944, -109.791944], [45.060833, -109.56...\n",
-       "...                                                    ...                                                ...\n",
-       "3628795  [Castle Mountain, Granite Peak, Beartooth Moun...  [[45.098889, -109.630556], [45.163427, -109.80...\n",
-       "3628796  [Castle Mountain, Granite Peak, Tempest Mounta...  [[45.098889, -109.630556], [45.163427, -109.80...\n",
-       "3628797  [Mount Peal, Castle Rock Mountain, Castle Moun...  [[45.160833, -109.772778], [45.098333, -109.65...\n",
-       "3628798  [Mount Wood, Granite Peak, Silver Run Peak, Ca...  [[45.275278, -109.813333], [45.163427, -109.80...\n",
-       "3628799  [Whitetail Peak, Beartooth Mountain, Mount Woo...  [[45.088889, -109.587778], [45.060833, -109.56...\n",
-       "\n",
-       "[3628800 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "By euclidean total distance, the least cost path is a tie between the following routes:\n",
+      "\n",
+      "Silver Run Peak -> Beartooth Mountain -> Whitetail Peak -> Castle Mountain -> Castle Rock Spire -> Castle Rock Mountain -> Mount Peal -> Tempest Mountain -> Granite Peak -> Mount Wood\n",
+      "Mount Wood -> Granite Peak -> Tempest Mountain -> Mount Peal -> Castle Rock Mountain -> Castle Rock Spire -> Castle Mountain -> Whitetail Peak -> Beartooth Mountain -> Silver Run Peak\n"
+     ]
     }
    ],
    "source": [
-    "from pandas import DataFrame\n",
-    "from numpy import array\n",
     "\n",
-    "possible_paths = dict(\n",
-    "    name=[],\n",
-    "    latlon=[]\n",
-    ")\n",
+    "least_cost_by_euclidean_distance = []\n",
     "\n",
-    "for possibility in possibilities:\n",
-    "    by_name = array([peaks[i][0] for i in possibility])\n",
-    "    by_latlon = array([peaks[i][1] for i in possibility])\n",
-    "    possible_paths['name'].append(by_name)\n",
-    "    possible_paths['latlon'].append(by_latlon)\n",
+    "shortest_paths_indexes = df[df.total_distance == df.total_distance.min()].indexes\n",
     "\n",
-    "df = DataFrame(possible_paths)\n",
+    "for i, indexes in enumerate(shortest_paths_indexes):\n",
+    "    least_cost_by_euclidean_distance.append([])\n",
+    "    for index in indexes:\n",
+    "        least_cost_by_euclidean_distance[i].append(peaks[index])\n",
     "\n",
-    "df"
+    "\n",
+    "print(\"By euclidean total distance, the least cost path is a tie between the following routes:\\n\")\n",
+    "\n",
+    "msgs = []\n",
+    "for path in least_cost_by_euclidean_distance:\n",
+    "    msg = \" -> \".join([p[0] for p in path])\n",
+    "    print(msg)"
    ]
   }
  ],
